Fixed small size of fonts and buttons on mobile devices

--- a/style.css
+++ b/style.css
@@ -9,12 +9,6 @@ main {
     color: gray;
 }
 
-.screen {
-    display: flex;
-    justify-content: center;
-    flex-grow: 1;
-}
-
 h1 {
     font-size: 4.5vw;
     justify-self: start;
@@ -104,6 +98,7 @@ li {
 
 .search-button {
     display: flex;
+    flex-shrink: 0;
     padding: 0;
     font-size: 1.5vw;
     width: 3vw;
@@ -181,6 +176,24 @@ li {
 }
 
 @media (max-width: 768px) {
+    body {
+        font-size: 4vw;
+    }
+
+    h1 {
+        font-size: 6vw;
+        justify-self: start;
+    }
+
+    h2 {
+        font-size: 6vw;
+        margin: 0;
+    }
+    h3 {
+        font-size: 5.5vw;
+        margin: 0;
+    }
+
     .header {
         grid-template-columns: repeat(2, 1fr);
     }
@@ -215,9 +228,19 @@ li {
     }
 
     .refresh-geo {
-        width: 15vw;
-        height: 15vw;
+        width: 10vw;
+        height: 10vw;
         background: url("img/Refresh_icon.svg") no-repeat;
         justify-self: end;
+    }
+
+    .search-button {
+        width: 5vw;
+        height: 5vw;
+    }
+
+    .close-button {
+        width: 5vw;
+        height: 5vw;
     }
 }
